--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<script src="assets/js/map.js"></script>
 		<script src='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
 		<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.min.js'></script>
+        <script type="text/javascript" charset="utf-8" src="cordova-2.4.0.js"></script>
 		
         <div id="weather">
 
